--- a/SwashbucklerDiary/Shared/MainLayout.razor
+++ b/SwashbucklerDiary/Shared/MainLayout.razor
@@ -1,75 +1,26 @@
 ﻿@inherits LayoutComponentBase
 
-<MApp>
-    <MMain Style="@($"transition: padding-left ease 0.3s !important; {(ShowBottomNavigation?"":"padding-bottom:0px;")}")">
-        @if (MasaBlazor.Breakpoint.SmAndUp)
-        {
-            <MNavigationDrawer App
-                               Floating
-                               Style="max-height:unset;transition: width ease 0.3s;"
-                               Permanent>
-                <MList Rounded Flat>
-                    <MListItemGroup @bind-Value="SelectedItemIndex" Mandatory>
-                        @foreach (var (item, i) in NavigationButtons.Select((v, i) => (v, i)))
-                        {
-                            var activated = SelectedItemIndex == i;
-
-                            <MListItem Ripple="false" OnClick="item.Action">
-                                <MListItemIcon>
-                                    <MIcon Large="activated">
-                                        @(activated ? item.SelectedIcon : item.Icon)
-                                    </MIcon>
-                                </MListItemIcon>
-                                <MListItemTitle Class="@(activated?"text-h6 font-weight-bold":"")"
-                                        Style="transition: font-size 0.3s ease;">
-                                    @(I18n.T(item.Text))
-                                </MListItemTitle>
-                            </MListItem>
-                        }
-                    </MListItemGroup>
-                </MList>
-            </MNavigationDrawer>
-        }
-        <ErrorBoundary>
-            <ChildContent>
+<ErrorBoundary>
+    <ChildContent>
+        <MApp>
+            <MMain Style="@MainStyle">
+                @if (MasaBlazor.Breakpoint.SmAndUp)
+                {
+                    <MainNavigationDrawer @bind-Value="SelectedItemIndex" Items="NavigationButtons">
+                    </MainNavigationDrawer>
+                }
                 @Body
-            </ChildContent>
-            <ErrorContent>
-                <MDialog Value="true"
-                         Persistent
-                         MaxWidth="420">
-                    <MCard>
-                        <MCardTitle Class="font-weight-bold">
-                            <MIcon Class="error--text mr-2">
-                                mdi-close-circle-outline
-                            </MIcon>
-                            @(I18n.T("ErrorHandle.Title"))
-                        </MCardTitle>
-                        <MCardText>
-                            @(I18n.T("ErrorHandle.Content"))
-                        </MCardText>
-                    </MCard>
-                </MDialog>
-            </ErrorContent>
-        </ErrorBoundary>
-    </MMain>
-    @if (ShowBottomNavigation)
-    {
-        <MBottomNavigation @bind-Value="SelectedItemIndex"
-                           InputValue="ShowBottomNavigation"
-                           Class="d-flex justify-space-around d-sm-none"
-                           Mandatory
-                           App
-                           Shift>
-        @foreach (var (item, i) in NavigationButtons.Select((v, i) => (v, i)))
+            </MMain>
+            @if (ShowBottomNavigation)
             {
-                <MButton Ripple="false" OnClick="item.Action">
-                    <span>@(I18n.T(item.Text))</span>
-                    <MIcon>
-                        @(SelectedItemIndex == i ? item.SelectedIcon : item.Icon)
-                    </MIcon>
-                </MButton>
+                <MainBottomNavigation @bind-Value="SelectedItemIndex"
+                                  InputValue="ShowBottomNavigation"
+                                  Items="NavigationButtons">
+                </MainBottomNavigation>
             }
-        </MBottomNavigation>
-    }
-</MApp>
+        </MApp>
+    </ChildContent>
+    <ErrorContent>
+        <ErrorDialog></ErrorDialog>
+    </ErrorContent>
+</ErrorBoundary>
