--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -177,8 +177,8 @@
 </MyDialog>
 
 <MOverlay Value="showLoading" ZIndex="99">
-    <MProgressCircular Indeterminate
-                       Size="48"></MProgressCircular>
+    <MProgressCircular Indeterminate Size="48">
+    </MProgressCircular>
 </MOverlay>
 
 <DeleteDialog @bind-Value="ShowDelete"
