--- a/SwashbucklerDiary/Components/DiaryCard.razor
+++ b/SwashbucklerDiary/Components/DiaryCard.razor
@@ -1,6 +1,6 @@
 ﻿@inherits MyComponentBase
-<MCard Elevation="4"
-       Rounded="@("lg")"
+<MCard Rounded="@("lg")"
+       Elevation="4"
        Class="@("my-5 " + Class)"
        OnClick="OnClick"
        Ripple="false"
