--- a/SwashbucklerDiary/Pages/IndexPage.razor
+++ b/SwashbucklerDiary/Pages/IndexPage.razor
@@ -2,8 +2,7 @@
 @inherits PageComponentBase
 
 <MAppBar App
-         Elevation="0"
-         Color="white">
+         Elevation="0">
     <MTabs @bind-Value="tab"
            ActiveClass="text-h6 font-weight-bold"
            HideSlider
@@ -25,11 +24,10 @@
 
 <SwiperTabItems @bind-Value="tab">
     <SwiperTabItem Bottom>
-        <div class="mb-8 px-2">
+        <div class="mb-5 px-2">
             <MSubheader Class="px-0">
                 @(DateTime.Now.ToString("yyyy/MM/dd") + " " + I18n.ToWeek())
             </MSubheader>
-
             <div class="text-h6 font-weight-bold">
                 @GetWelcomeText()
             </div>
