--- a/SwashbucklerDiary/Shared/MainBottomNavigation.razor
+++ b/SwashbucklerDiary/Shared/MainBottomNavigation.razor
@@ -2,12 +2,12 @@
 @using SwashbucklerDiary.Models
 
 <MBottomNavigation Value="Value"
-    ValueChanged="ValueChanged"
+                   ValueChanged="ValueChanged"
                    InputValue="InputValue"
                    Class="d-flex justify-space-around d-sm-none"
-                          Mandatory
-                          App
-                          Shift>
+                   Mandatory="true"
+                   App="true"
+                   Shift="true">
     @foreach (var (item, i) in Items.Select((v, i) => (v, i)))
     {
         <MButton Ripple="false" OnClick="item.Action">
@@ -19,7 +19,7 @@
     }
 </MBottomNavigation>
 
-@code{
+@code {
     [Inject]
     private II18nService I18n { get; set; } = default!;
 
