🆕 feat: add ThemeService and fixed some bugs

--- a/SwashbucklerDiary/Components/MyMarkdown.razor.css
+++ b/SwashbucklerDiary/Components/MyMarkdown.razor.css
@@ -1,6 +1,6 @@
-﻿::deep .vditor {
+﻿/*::deep .vditor {
     --textarea-background-color: #fff;
-}
+}*/
 
 ::deep .vditor-toolbar {
     background-color: transparent;
