--- a/SwashbucklerDiary/Pages/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/AboutPage.razor
@@ -11,8 +11,8 @@
            Rounded="@("lg")">
         <MList>
             <MListItem>
-                <MListItemAvatar Rounded="@("lg")" Size="75" Class="pr-4 hidden-sm-and-down">
-                    <MImage Src="./logo/logo.svg"></MImage>
+                <MListItemAvatar Rounded="@("lg")" Size="75" Class="mr-8 hidden-sm-and-down">
+                    <MImage Src="./logo/logo.jpg"></MImage>
                 </MListItemAvatar>
                 <MListItemContent>
                     <MListItemTitle Class="text-h5 my-2 font-weight-bold">
