--- a/SwashbucklerDiary/Pages/IndexPage.razor
+++ b/SwashbucklerDiary/Pages/IndexPage.razor
@@ -5,8 +5,7 @@
          Elevation="0">
     <MTabs @bind-Value="tab"
            ActiveClass="text-h6 font-weight-bold"
-           HideSlider
-           Color="black">
+           HideSlider>
         <MTab Class="m-tab-swiper"
               Ripple="false">
             @(I18n.T("Index.All"))
