--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -2,8 +2,7 @@
 @inherits PageComponentBase
 
 <MAppBar App
-         Elevation="0"
-         Color="white">
+         Elevation="0">
     <ChildContent>
         <MButton Icon OnClick="OnBack">
             <MIcon>
