--- a/SwashbucklerDiary/Shared/MainLayout.razor
+++ b/SwashbucklerDiary/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <ErrorBoundary>
     <ChildContent>
-        <MApp>
+        <MApp Dark="Dark">
             <MMain Style="@MainStyle">
                 @if (MasaBlazor.Breakpoint.SmAndUp)
                 {
