--- a/SwashbucklerDiary/Pages/BackupsPage.razor
+++ b/SwashbucklerDiary/Pages/BackupsPage.razor
@@ -2,8 +2,7 @@
 @inherits PageComponentBase
 
 <MAppBar App
-         Elevation="0"
-         Color="white">
+         Elevation="0">
     <MButton Icon OnClick="NavigateToBack">
         <MIcon>
             mdi-arrow-left
@@ -11,8 +10,7 @@
     </MButton>
     <MTabs @bind-Value="tabs"
            ActiveClass="text-h6 font-weight-bold"
-           HideSlider
-           Color="black">
+           HideSlider>
         <MTab Class="m-tab-swiper"
               Ripple="false">
             @(I18n.T("Backups.Local"))
