--- a/SwashbucklerDiary/Pages/IndexPage.razor
+++ b/SwashbucklerDiary/Pages/IndexPage.razor
@@ -42,9 +42,7 @@
 @if (tab == 0)
 {
     <FabTransition>
-        <MButton Color="black"
-             Class="mb-15 mb-sm-0"
-             Dark
+        <MButton Class="mb-15 mb-sm-0 icon-btn"
              Bottom
              Right
              Fixed
@@ -60,9 +58,7 @@
 @if (tab == 1)
 {
     <FabTransition>
-        <MButton Color="black"
-             Class="mb-15 mb-sm-0"
-             Dark
+        <MButton Class="mb-15 mb-sm-0 icon-btn"
              Bottom
              Right
              Fixed
