--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -174,6 +174,7 @@
                 @foreach (var item in ThemeStates)
                 {
                     <MRadio Label="@(I18n.T(item.Key))"
+                        Disabled="@(item.Value == ThemeState.System)"
                         Class="my-2"
                         Value="@(item.Value)"
                         Color="@MRadioColor">
