--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -80,7 +80,7 @@
     @if (ShowTitle)
     {
         <MTextField @bind-Value="Diary.Title"
-                Class="pb-0 my-sm-4 user-select font-weight-bold"
+                Class="pb-0 my-sm-4 user-select font-weight-bold flex-grow-0"
                 Solo="Mobile"
                 Flat="Mobile"
                 Outlined="Desktop"
