🐛 fix: fixed Privacy mode cannot open

--- a/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
@@ -34,7 +34,7 @@
             <MButton Text
                      Color="primary"
                      OnClick="HandleOnOK">
-                @(I18n.T("Share.Save"))
+                @(OKText ?? I18n.T("Share.Save"))
             </MButton>
         </MCardActions>
     </MCard>
